<resources>
    <string name="app_name">StorageManipulator - Dummy file generator</string>
    <string name="app_name_short">Dummy file generator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="internal_storage">Internal</string>
    <string name="external_storage">External</string>
    <string name="title_internal_storage_header">Internal storage</string>
    <string name="title_external_storage_header">External storage</string>
    <string name="title_device_name">Device name : </string>
    <string name="text_device_name">Redmi 9 </string>
    <string name="title_manufacturer">Manufacturer : </string>
    <string name="text_manufacturer">Xiaomi </string>
    <string name="title_operating_system">Operating system : </string>
    <string name="text_operating_system">OS 11</string>
    <string name="text_internal_storage">55%</string>
    <string name="title_internal_storage">Internal storage : </string>
    <string name="text_external_storage">50%</string>
    <string name="title_external_storage">External storage: </string>
    <string name="text_loading">Getting info … </string>
    <string name="text_unknown">Unknown</string>
    <string name="title_version_release">Version release:</string>
    <string name="title_total_device_memory">Total device memory (mb): </string>
    <string name="title_avail_device_memory">Available device memory (mb): </string>
    <string name="external_not_mounted">"Please mount an external SD card to continue"</string>
    <!-- general labels-->
    <string name="string_with_percent">%1$.1f%%</string>
    <string name="string_with_divide">/</string>
    <!--Button for generation-->
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <!--Status for button-->
    <string name="adding">Adding…</string>
    <!--Size for generation of files-->
    <string name="kilobytes">Kbs</string>
    <string name="megabytes">Mbs</string>
    <string name="gigabytes">Gbs</string>
    <!--Size with spaces-->
    <string name="kilobytes_space">&#160;Kbs</string>
    <string name="megabytes_space">&#160;Mbs</string>
    <string name="gigabytes_space">&#160;Gbs</string>
    <!--label for action buttons-->
    <string name="file_delete_label">Delete file/s</string>
    <string name="file_generate_label">Generate file/s</string>
    <!--label for input edit textfields-->
    <string name="input_size_label">Input size</string>
    <string name="input_max_size_label">Max size</string>
    <string name="file_size_error_message">Please input a valid file size</string>
    <string name="job_running_error_message">Job already started</string>
    <string name="insufficient_mem_error_message">Insufficient storage to proceed</string>
    <!--Status for size-->
    <string name="remaining_size_status_label">Remaining:&#160;</string>
    <!-- Message for generation -->
    <string name="work_in_progress">Started generation</string>
    <string name="button_status_tag">button_status_tag</string>
    <!-- Keys to save bundle -->
    <string name="progress_button">Progress_Button</string>
    <string name="progress_percent">Progress_Percent</string>
    <string name="selected_unit">Selected Unit</string>
    <string name="remaining_to_add">Remaining</string>
    <string name="total_to_add">Total</string>
    <string name="internal_storage_bundle">Internal Storage Bundle</string>


</resources>