<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color">

    <RelativeLayout
        android:id="@+id/progressBar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="72dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/reply_orange"
            android:layout_toEndOf="@+id/progressBar"
            android:visibility="invisible"
            android:minWidth="0dp"
            android:background="@android:color/transparent"
            app:iconPadding="0dp"
            app:icon="@android:drawable/ic_menu_close_clear_cancel" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar_drawable" />


        <TextView
            android:id="@+id/text_status_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/adding"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/progressBar"
            android:layout_centerInParent="true"
            android:text="@string/text_unknown"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/status_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/text_progress"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:text="@string/pause"
            android:textColor="@color/reply_orange"
            android:visibility="invisible"
            app:icon="@android:drawable/ic_media_pause" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/statistics_progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_container"
        app:layout_constraintVertical_bias="0.04"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/title_status_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/remaining_size_status_label"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title_avail_internal_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/string_with_divide"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/title_total_internal_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title_statistics_progress_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/kilobytes_space"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/size_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_progress_container"
        app:layout_constraintVertical_bias="0.04"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/unit_size_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_button_kb"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_kb"
                style="@style/Widget.App.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:text="@string/kilobytes"
                android:textColor="@color/black"
                app:useMaterialThemeColors="false" />

            <RadioButton
                android:id="@+id/radio_button_mb"
                style="@style/Widget.App.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:text="@string/megabytes"
                android:textColor="@color/black"
                app:useMaterialThemeColors="false" />

            <RadioButton
                android:id="@+id/radio_button_gb"
                style="@style/Widget.App.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="100dp"
                android:text="@string/gigabytes"
                android:textColor="@color/black"
                app:useMaterialThemeColors="false" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_size_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_buttons_container"
        app:layout_constraintVertical_bias="0.04"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggle_max_size"
            style="@style/Widget.App.Switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.23"
            android:checked="false"
            android:text="@string/input_max_size_label"
            android:textColor="@color/black"
            app:useMaterialThemeColors="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".03" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_textSize_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/input_size_label"
            android:maxWidth="300dp"
            android:minWidth="250dp"
            app:endIconMode="clear_text"
            app:suffixText="KBs"
            app:suffixTextColor="@color/black"
            android:textColorHint="@color/reddish_brown"
            app:boxStrokeColor="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_textSize_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_size_container"
        app:layout_constraintVertical_bias="0.04"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10" />

        <Button
            android:id="@+id/generate_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/reply_orange"
            android:text="@string/file_generate_label"
            android:visibility="visible"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10" />

        <Button
            android:id="@+id/delete_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/reply_orange"
            android:text="@string/file_delete_label"
            android:visibility="visible"
            style="@style/Widget.Material3.Button.TextButton"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>